# NeuroForge

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Makefile  README.md  idea.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
assets/styles/: neuroforge.qss  pytest-report.css  variables.css
docs/: index.md  phase0_init.md  phase1_project_graph.md  phase2_pytorch_training.md  phase3_versioning.md  phase4_live_monitoring.md
docs/api/: core.md  datasets.md  graph.md  index.md  storage.md  tracking.md  training.md  ui.md  visualization.md
docs/dev/: contributing.md  phase1_project_graph.md  phase2_pytorch_training.md  phase3_versioning.md  phase4_live_monitoring.md  phase5_remote_execution.md  roadmap.md
docs/guide/: concepts.md  quickstart.md
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/2026-06-16/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/2026-06-17/: .graphify_labels.json  GRAPH_REPORT.md  graph.json  manifest.json
graphify-out/cache/: stat-index.json
scripts/: theme_reports.py
src/cpp/metrics/: CMakeLists.txt  bindings.cpp
src/cpp/storage/: CMakeLists.txt  bindings.cpp
src/neuroforge/: __main__.py
src/neuroforge/core/: project.py
src/neuroforge/graph/: commands.py  components.py  model.py  registry.py  serializer.py  validator.py
src/neuroforge/ui/: palette.py
src/neuroforge/ui/graph_editor/: items.py  scene.py  view.py
tests/: conftest.py
tests/cpp/: CMakeLists.txt
tests/unit/: test_commands.py  test_components.py  test_graph_editor.py  test_graph_model.py  test_graph_serializer.py  test_graph_validator.py  test_node_registry.py  test_palette.py  test_project.py  test_smoke.py
