[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "neuroforge"
version = "0.1.0"
description = "Visual neural network designer with PyTorch backend"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.7",
    "torch>=2.2",
    "torchvision>=0.17",
    "pyqtgraph>=0.13",
    "msgpack>=1.0",
    "paramiko>=3.4",
    "keyring>=25.0",
    "pytest>=9.1.0",
    "pytest-qt>=4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/neuroforge"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
]
