[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "neuroforge"
version = "0.2.0"
description = "Visual neural network designer with PyTorch backend"
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.7",
    "torch>=2.2",
    "torchvision>=0.17",
    "pyqtgraph>=0.13",
    "msgpack>=1.0",
    "paramiko>=3.4",
    "keyring>=25.0",
    "scikit-build-core>=0.12.2",
    "pybind11>=3.0.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-qt>=4.4",
    "ruff>=0.5",
    "mypy>=1.10",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
addopts = "--html=reports/test-report.html --self-contained-html --css=assets/styles/pytest-report.css"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
mypy_path = "src"

[tool.scikit-build]
cmake.build-type = "Release"
wheel.packages = ["src/neuroforge"]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.17",
    "pytest>=9.1.0",
    "pytest-qt>=4.5.0",
    "pytest-cov>=5.0",
    "pytest-html>=4.1",
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "pre-commit>=4.0",
    "commitizen>=3.29",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
update_changelog_on_bump = true

[tool.coverage.run]
source = ["src/neuroforge"]
omit = ["src/neuroforge/__main__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 0
